Library.bib auto update

--- a/library.bib
+++ b/library.bib
@@ -1083,6 +1083,20 @@
   series = {Lecture {{Notes}} in {{Computer Science}}}
 }
 
+@inproceedings{chu_contextual_2011,
+  title = {Contextual {{Bandits}} with {{Linear Payoff Functions}}},
+  booktitle = {Proceedings of the {{Fourteenth International Conference}} on {{Artificial Intelligence}} and {{Statistics}}},
+  author = {Chu, Wei and Li, Lihong and Reyzin, Lev and Schapire, Robert},
+  year = {2011},
+  month = jun,
+  pages = {208--214},
+  issn = {1938-7228},
+  abstract = {In this paper we study the contextual bandit problem (also known as the multi-armed bandit problem with expert advice) for linear payoff functions.  For T rounds, K actions, and d dimensional featu...},
+  chapter = {Machine Learning},
+  file = {C\:\\Users\\aesou\\Zotero\\storage\\PSG2QDJN\\Chu et al. - 2011 - Contextual Bandits with Linear Payoff Functions.pdf;C\:\\Users\\aesou\\Zotero\\storage\\YZW4B3BJ\\chu11a.html},
+  language = {en}
+}
+
 @inproceedings{chung_monte_2005,
   title = {Monte {{Carlo Planning}} in {{RTS Games}}},
   booktitle = {{{IEEE Symposium}} on {{Computational Intelligence}} and {{Games}}},
@@ -2660,6 +2674,21 @@ Fourth, UAlbertaBot: our starcraft AI bot which won the 2013 AIIDE starcraft AI 
   file = {C\:\\Users\\aesou\\Zotero\\storage\\FV46TQ9P\\Johanson et al. - 2013 - Evaluating State-Space Abstractions in Extensive-F.pdf}
 }
 
+@inproceedings{justesen_blood_2019,
+  title = {Blood {{Bowl}}: {{A New Board Game Challenge}} and {{Competition}} for {{AI}}},
+  shorttitle = {Blood {{Bowl}}},
+  booktitle = {2019 {{IEEE Conference}} on {{Games}} ({{CoG}})},
+  author = {Justesen, Niels and Uth, Lasse M{\o}ller and Jakobsen, Christopher and Moore, Peter David and Togelius, Julian and Risi, Sebastian},
+  year = {2019},
+  month = aug,
+  pages = {1--8},
+  issn = {2325-4270},
+  doi = {10.1109/CIG.2019.8848063},
+  abstract = {We propose the popular board game Blood Bowl as a new challenge for Artificial Intelligence (AI). Blood Bowl is a fully-observable, stochastic, turn-based, modern-style board game with a grid-based game board. At first sight, the game ought to be approachable by numerous game-playing algorithms. However, as all pieces on the board belonging to a player can be moved several times each turn, the turn-wise branching factor becomes overwhelming for traditional algorithms. Additionally, scoring points in the game is rare and difficult, which makes it hard to design heuristics for search algorithms or apply reinforcement learning. We present the Fantasy Football AI (FFAI) framework that implements the core rules of Blood Bowl and includes a forward model, several OpenAI Gym environments for reinforcement learning, competition functionalities, and a web application that allows for human play. We also present Bot Bowl I, the first AI competition that will use FFAI along with baseline agents and preliminary reinforcement learning results. Additionally, we present a wealth of opportunities for future AI competitions based on FFAI.},
+  file = {C\:\\Users\\aesou\\Google Drive\\Doctorate\\Articles\\Justesen et al. - 2019 - Blood Bowl A New Board Game Challenge and Competi.pdf;C\:\\Users\\aesou\\Zotero\\storage\\IAN3IGIT\\8848063.html},
+  keywords = {AI competition,artificial intelligence,Blood,Blood Bowl,board game challenge,Bot Bowl,computer games,Conferences,Fantasy Football AI framework,game-playing algorithms,Games,grid-based game board,Injuries,Internet,learning (artificial intelligence),modern-style board game,OpenAI Gym environments,reinforcement learning,Reinforcement learning,search algorithms,Sports,turn-wise branching factor,Web application}
+}
+
 @inproceedings{justesen_continual_2017,
   title = {Continual Online Evolutionary Planning for In-Game Build Order Adaptation in {{StarCraft}}},
   booktitle = {Proceedings of the {{Genetic}} and {{Evolutionary Computation Conference}} on   - {{GECCO}} '17},
@@ -2736,6 +2765,20 @@ Fourth, UAlbertaBot: our starcraft AI bot which won the 2013 AIIDE starcraft AI 
   file = {C\:\\Users\\aesou\\Zotero\\storage\\2ZJZKL98\\Justesen et al. - 2014 - Script- and cluster-based UCT for StarCraft.pdf},
   isbn = {978-1-4799-3547-5},
   language = {en}
+}
+
+@inproceedings{justesen_when_2019,
+  title = {When {{Are We Done}} with {{Games}}?},
+  booktitle = {2019 {{IEEE Conference}} on {{Games}} ({{CoG}})},
+  author = {Justesen, Niels and Debus, Michael S. and Risi, Sebastian},
+  year = {2019},
+  month = aug,
+  pages = {1--8},
+  issn = {2325-4270},
+  doi = {10.1109/CIG.2019.8847963},
+  abstract = {From an early point, games have been promoted as important challenges within the research field of Artificial Intelligence (AI). Recent developments in machine learning have allowed a few AI systems to win against top professionals in even the most challenging video games, including Dota 2 and StarCraft. It thus may seem that AI has now achieved all of the long-standing goals that were set forth by the research community. In this paper, we introduce a black box approach that provides a pragmatic way of evaluating the fairness of AI vs. human competitions, by only considering motoric and perceptual fairness on the competitors' side. Additionally, we introduce the notion of extrinsic and intrinsic factors of a game competition and apply these to discuss and compare the competitions in relation to human vs. human competitions. We conclude that Dota 2 and StarCraft II are not yet mastered by AI as they so far only have been able to win against top professionals in limited competition structures in restricted variants of the games.},
+  file = {C\:\\Users\\aesou\\Google Drive\\Doctorate\\Articles\\justesen2019.pdf;C\:\\Users\\aesou\\Zotero\\storage\\FW6S9RU5\\8847963.html},
+  keywords = {AI systems,artificial intelligence,black box approach,competition structures,computer games,Computers,Dota 2,extrinsic factors,game competition,Games,human competitions,intrinsic factors,learning (artificial intelligence),machine learning,Machine learning,Pragmatics,StarCraft II,Task analysis,Training,video games}
 }
 
 @article{kahng_clear_2018,
@@ -3610,6 +3653,23 @@ bots with little to none domain expert knowledge.},
   file = {C\:\\Users\\aesou\\Zotero\\storage\\TH4ICN35\\Malý - 2017 - Learning to play real-time strategy games from dem.pdf},
   school = {Czech Technical University in Prague},
   type = {Master}
+}
+
+@article{mandai_linucb_2016,
+  title = {{{LinUCB}} Applied to {{Monte Carlo}} Tree Search},
+  author = {Mandai, Yusaku and Kaneko, Tomoyuki},
+  year = {2016},
+  month = sep,
+  volume = {644},
+  pages = {114--126},
+  issn = {0304-3975},
+  doi = {10.1016/j.tcs.2016.06.035},
+  abstract = {UCT is a standard method of Monte Carlo tree search (MCTS) algorithms, which have been applied to various domains and have achieved remarkable success. This study proposes a family of LinUCT algorithms that incorporate LinUCB into MCTS algorithms. LinUCB is a recently developed method that generalizes past episodes by ridge regression with feature vectors and rewards. LinUCB outperforms UCB1 in contextual multi-armed bandit problems. We introduce a straightforward application of LinUCB, LinUCTPLAIN by substituting UCB1 with LinUCB in UCT. We show that it does not work well owing to the minimax structure of game trees. To better handle such tree structures, we present LinUCTRAVE and LinUCTFP by further incorporating two existing techniques, rapid action value estimation (RAVE) and feature propagation, which recursively propagates the feature vector of a node to that of its parent. Experiments were conducted with a synthetic model, which is an extension of the standard incremental random tree model in which each node has a feature vector that represents the characteristics of the corresponding position, and Finnsson's shock step game which is used to empirically analyze the performance of UCT with respect to the distribution of suboptimal moves. The experiments results indicate that LinUCTRAVE and LinUCTFP outperform UCT, especially when the branching factor is relatively large.},
+  file = {C\:\\Users\\aesou\\Google Drive\\Doctorate\\Articles\\Mandai and Kaneko - 2016 - LinUCB applied to Monte Carlo tree search.pdf;C\:\\Users\\aesou\\Zotero\\storage\\YR695BMY\\S0304397516302808.html},
+  journal = {Theoretical Computer Science},
+  keywords = {Contextual bandit,LinUCB,MCTS,Multi-armed bandit problem},
+  language = {en},
+  series = {Recent {{Advances}} in {{Computer Games}}}
 }
 
 @incollection{mandziuk_creating_2013,
@@ -5844,7 +5904,7 @@ Finally, learning becomes more difficult when controlling increasing numbers of 
   issn = {2168-2275},
   doi = {10.1109/TCYB.2019.2950779},
   abstract = {Machine learning develops rapidly, which has made many theoretical breakthroughs and is widely applied in various fields. Optimization, as an important part of machine learning, has attracted much attention of researchers. With the exponential growth of data amount and the increase of model complexity, optimization methods in machine learning face more and more challenges. A lot of work on solving optimization problems or improving optimization methods in machine learning has been proposed successively. The systematic retrospect and summary of the optimization methods from the perspective of machine learning are of great significance, which can offer guidance for both developments of optimization and machine learning research. In this article, we first describe the optimization problems in machine learning. Then, we introduce the principles and progresses of commonly used optimization methods. Finally, we explore and give some challenges and open problems for the optimization in machine learning.},
-  file = {C\:\\Users\\aesou\\Google Drive\\Doctorate\\Articles\\view.pdf;C\:\\Users\\aesou\\Zotero\\storage\\HMN5799Z\\Sun et al. - 2019 - A Survey of Optimization Methods From a Machine Le.pdf;C\:\\Users\\aesou\\Zotero\\storage\\DYJ7W8BW\\8903465.html},
+  file = {C\:\\Users\\aesou\\Google Drive\\Doctorate\\Articles\\Sun et al. - 2019 - A Survey of Optimization Methods From a Machine Le.pdf;C\:\\Users\\aesou\\Zotero\\storage\\HMN5799Z\\Sun et al. - 2019 - A Survey of Optimization Methods From a Machine Le.pdf;C\:\\Users\\aesou\\Zotero\\storage\\DYJ7W8BW\\8903465.html},
   journal = {IEEE Transactions on Cybernetics},
   keywords = {Approximate Bayesian inference,deep neural network (DNN),machine learning,optimization method,reinforcement learning (RL)}
 }
@@ -6390,6 +6450,20 @@ be used to reduce the search space and to improve the RTS playing bots.},
   primaryClass = {cs}
 }
 
+@inproceedings{vodopivec_enhancing_2014,
+  title = {Enhancing Upper Confidence Bounds for Trees with Temporal Difference Values},
+  booktitle = {2014 {{IEEE Conference}} on {{Computational Intelligence}} and {{Games}}},
+  author = {Vodopivec, Tom and {\v S}ter, Branko},
+  year = {2014},
+  month = aug,
+  pages = {1--8},
+  issn = {2325-4270},
+  doi = {10.1109/CIG.2014.6932895},
+  abstract = {Upper confidence bounds for trees (UCT) is one of the most popular and generally effective Monte Carlo tree search (MCTS) algorithms. However, in practice it is relatively weak when not aided by additional enhancements. Improving its performance without reducing generality is a current research challenge. We introduce a new domain-independent UCT enhancement based on the theory of reinforcement learning. Our approach estimates state values in the UCT tree by employing temporal difference (TD) learning, which is known to outperform plain Monte Carlo sampling in certain domains. We present three adaptations of the TD({$\lambda$}) algorithm to the UCT's tree policy and backpropagation step. Evaluations on four games (Gomoku, Hex, Connect Four, and Tic Tac Toe) reveal that our approach increases UCT's level of play comparably to the rapid action value estimation (RAVE) enhancement. Furthermore, it proves highly compatible with a modified all moves as first heuristic, where it considerably outperforms RAVE. The findings suggest that integration of TD learning into MCTS deserves further research, which may form a new class of MCTS enhancements.},
+  file = {C\:\\Users\\aesou\\Google Drive\\Doctorate\\Articles\\Vodopivec and Šter - 2014 - Enhancing upper confidence bounds for trees with t.pdf;C\:\\Users\\aesou\\Zotero\\storage\\9TA9TSJV\\6932895.html},
+  keywords = {backpropagation,Benchmark testing,Complexity theory,connect four game,domain-independent UCT enhancement,game theory,Games,gomoku game,hex game,MCTS algorithms,Monte Carlo methods,Monte Carlo sampling,Monte Carlo tree search algorithms,Optimization,Radiation detectors,rapid action value estimation enhancement,RAVE enhancement,reinforcement learning,Scalability,Sensitivity,state value estimation,temporal difference learning,temporal difference values,tic tac toe game,tree searching,trees (mathematics),UCT tree policy,upper confidence bounds for trees}
+}
+
 @incollection{walraet_googolplex_2016,
   title = {A {{Googolplex}} of {{Go Games}}},
   booktitle = {Computers and {{Games}}},
@@ -6457,6 +6531,23 @@ superior to the computer AI and looses interest in the single player part of the
   abstract = {Portfolio Online Evolution is a novel method for playing real-time strategy games through evolutionary search in the space of assignments of scripts to individual game units. This method builds on and recombines two recently devised methods for playing multi-action games: (1) Portfolio Greedy Search, which searches in the space of heuristics assigned to units rather than in the space of actions, and (2) Online Evolution, which uses evolution rather than tree search to effectively play games where multiple actions per turn lead to enormous branching factors. The combination of both ideas lead to the use of evolution to search the space of which script/heuristic is assigned to which unit. In this paper, we introduce the ideas of Portfolio Online Evolution and apply it to StarCraft micro, or individual battles. It is shown to outperform all other tested methods in battles of moderate to large size.},
   file = {C\:\\Users\\aesou\\Zotero\\storage\\KF8CAYA9\\Wang et al. - 2016 - Portfolio Online Evolution in StarCraft.pdf},
   language = {en}
+}
+
+@article{webb_not_2005,
+  title = {Not {{So Naive Bayes}}: {{Aggregating One}}-{{Dependence Estimators}}},
+  shorttitle = {Not {{So Naive Bayes}}},
+  author = {Webb, Geoffrey I. and Boughton, Janice R. and Wang, Zhihai},
+  year = {2005},
+  month = jan,
+  volume = {58},
+  pages = {5--24},
+  issn = {1573-0565},
+  doi = {10.1007/s10994-005-4258-6},
+  abstract = {Of numerous proposals to improve the accuracy of naive Bayes by weakening its attribute independence assumption, both LBR and Super-Parent TAN have demonstrated remarkable error performance. However, both techniques obtain this outcome at a considerable computational cost. We present a new approach to weakening the attribute independence assumption by averaging all of a constrained class of classifiers. In extensive experiments this technique delivers comparable prediction accuracy to LBR and Super-Parent TAN with substantially improved computational efficiency at test time relative to the former and at training time relative to the latter. The new algorithm is shown to have low variance and is suited to incremental learning.},
+  file = {C\:\\Users\\aesou\\Zotero\\storage\\J8N693AP\\Webb et al. - 2005 - Not So Naive Bayes Aggregating One-Dependence Est.pdf},
+  journal = {Machine Learning},
+  language = {en},
+  number = {1}
 }
 
 @inproceedings{weber_building_2011,
@@ -6568,6 +6659,24 @@ superior to the computer AI and looses interest in the single player part of the
   keywords = {Enemy Unit,Game State,Optimize Algorithm Parameter,Similarity Threshold,Unit Case},
   language = {en},
   series = {Lecture {{Notes}} in {{Computer Science}}}
+}
+
+@inproceedings{wickramarathna_invoke_2019,
+  title = {Invoke {{Artificial Intelligence}} and {{Machine Learning}} for {{Strategic}}-{{Level Games}} and {{Interactive Simulations}}},
+  booktitle = {Artificial {{Intelligence}}},
+  author = {Wickramarathna, Nishan Chathuranga and Ganegoda, Gamage Upeksha},
+  editor = {Hemanth, Jude and Silva, Thushari and Karunananda, Asoka},
+  year = {2019},
+  pages = {129--143},
+  publisher = {{Springer}},
+  address = {{Singapore}},
+  doi = {10.1007/978-981-13-9129-3_10},
+  abstract = {Computer games are an important sector of the digital economy, computer and entertainment industry are very sophisticated in many ways in the current context of technology. They've gone beyond entertainment needs, and the computer game paradigm and technology together are now increasingly used in education, training, storytelling, and wherever it's necessary to create an appealing and engaging environment. More realism in virtual and artificial environments and more real interfaces to the users can be considered as two main advantages that we get using these techniques. Instead of pre-defined hard coded scripts driving these environments, we will be able to create just the environment and its relative mechanics, so the artificial intelligence could introduce tailored challenges and scenarios to the environment. This paper proposes a Behavioral Driven Procedural Content Generation methodology together with Ternary Neural Networks to be used in interactive strategy-based simulations for effective decision making. This is vital because current approaches like Experience Driven Procedural Content Generation algorithms can be very flexible and one small change could trigger complex changes in the system. Using another model created by using player behavior will be specifying the clamping conditions so the AI is capable of stabilizing itself.},
+  file = {C\:\\Users\\aesou\\Google Drive\\Doctorate\\Articles\\Wickramarathna and Ganegoda - 2019 - Invoke Artificial Intelligence and Machine Learnin.pdf},
+  isbn = {9789811391293},
+  keywords = {Artificial intelligence,Computer games,Machine learning,Procedural content generation,Simulations},
+  language = {en},
+  series = {Communications in {{Computer}} and {{Information Science}}}
 }
 
 @article{wilson_evolving_2018,
