Replace figures with a single PDF. Add NMCTS PT results.

--- a/cog-paper.tex
+++ b/cog-paper.tex
@@ -115,37 +115,13 @@ The game tree is constructed iteratively, and given enough computation budget an
 
 % WIP
 
-\begin{figure}[!h]
+\begin{figure*}[!h]
 \begin{center}
-	\includegraphics[scale=0.7]{figs/PT-UCT-RIP-F.png}
+	\includegraphics[width=0.8\textwidth]{figs/PT.pdf}
 	\caption{UCT-RIP-F performance against UCT}
-	\label{PT-UCT-RIP-F}
+	\label{PT}
 \end{center}
-\end{figure}
-
-\begin{figure}[!h]
-\begin{center}
-	\includegraphics[scale=0.7]{figs/WLDRate-UCT-RIP-F.png}
-	\caption{Win/Loss/Draw rates of the optimal RIP-F parameter, against UCT }
-	\label{PT-UCT-RIP-F}
-\end{center}
-\end{figure}
-
-\begin{figure}[!h]
-\begin{center}
-	\includegraphics[scale=0.7]{figs/PT-UCT-RIP-P.png}
-	\caption{UCT-RIP-P performance against UCT}
-	\label{PT-UCT-RIP-P}
-\end{center}
-\end{figure}
-
-\begin{figure}[!h]
-\begin{center}
-	\includegraphics[scale=0.7]{figs/WLDRate-UCT-RIP-P.png}
-	\caption{Win/Loss/Draw rates of the optimal RIP-P parameter, against UCT }
-	\label{PT-UCT-RIP-F}
-\end{center}
-\end{figure}
+\end{figure*}
 
 \subsection{Best Pruning Approach}
 
